--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="description"
-        content="Occlusion-friendly Personalized Multi-concept Generation In Diffusion Models">
+        content="Occlusion-friendly Personalized Multi-concept Generation In Diffusion Models (ECCV 2024)">
   <meta name="keywords" content="Image Generation, Multi-Concept Customization, Diffusion Model">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>OMG: Occlusion-friendly Personalized Multi-concept Generation In Diffusion Models</title>
