--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="description"
-        content="Occlusion-friendly Personalized Multi-concept Generation In Diffusion Models (ECCV 2024)">
+        content="Occlusion-friendly Personalized Multi-concept Generation In Diffusion Models">
   <meta name="keywords" content="Image Generation, Multi-Concept Customization, Diffusion Model">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>OMG: Occlusion-friendly Personalized Multi-concept Generation In Diffusion Models</title>
+  <title>OMG: Occlusion-friendly Personalized Multi-concept Generation In Diffusion Models (ECCV 2024)</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYVRSFMDRL"></script>
