--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           </div>
 
           <div class="is-size-5 publication-authors">
-            <span class="author-block"><sup>1</sup>Sun Yat-sen University,</span>
+            <span class="author-block"><sup>1</sup>Shenzhen Campus of Sun Yat-sen University,</span>
             <span class="author-block"><sup>2</sup>Tencent AI Lab,</span>
             <span class="author-block"><sup>3</sup>International Digital Economy Academy,</span>
             <span class="author-block"><sup>4</sup>Nanjing University,</span>
