--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="description"
-        content="Occlusion-friendly Personalized Multi-concept Generation In Diffusion Models">
+        content="Occlusion-friendly Personalized Multi-concept Generation In Diffusion Models (ECCV 2024)">
   <meta name="keywords" content="Image Generation, Multi-Concept Customization, Diffusion Model">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>OMG: Occlusion-friendly Personalized Multi-concept Generation In Diffusion Models (ECCV 2024)</title>
@@ -88,7 +88,7 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">OMG: Occlusion-friendly Personalized Multi-concept Generation In Diffusion Models</h1>
+          <h1 class="title is-1 publication-title">OMG: Occlusion-friendly Personalized Multi-concept Generation In Diffusion Models (ECCV 2024)</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="https://scholar.google.com/citations?user=4X3yLwsAAAAJ&hl=zh-CN">Zhe Kong</a><sup>1</sup>,</span>
